# gamedev

./: README.md
01-axe/: .clangd  .gitignore  CMakeLists.txt  main.cpp
01-axe/.zed/: debug.json  settings.json
02-dapper-dasher/: .clangd  .gitignore  CMakeLists.txt  main.cpp
02-dapper-dasher/.zed/: tasks.json
03-classy-clash/: .clangd  main.cpp  tileset.tsx
04-shooter-platformer/: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md
04-shooter-platformer/.zed/: settings.json
04-shooter-platformer/src/: animation.h  gameobject.h  main.cpp  state.h  timer.h
template/.zed/: settings.json
